--- a/src/partials/cases.html
+++ b/src/partials/cases.html
@@ -9,7 +9,7 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <div class="cases__block-img">
-                            <img src="./images/case-1.webp" alt="Кейс Белпромстандарт">
+                            <img src="./images/case-1.webp" loading="lazy" alt="Кейс Белпромстандарт">
                         </div>
                         <div class="cases__block">
                             <h4 class="cases__caption">Сертификация, разработка документации</h4>
@@ -240,7 +240,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="cases__block-img">
-                            <img src="./images/case-1.webp" alt="Кейс Белпромстандарт">
+                            <img src="./images/case-1.webp" loading="lazy" alt="Кейс Белпромстандарт">
                         </div>
                         <div class="cases__block">
                             <h4 class="cases__caption">Сертификация, разработка документации</h4>
@@ -471,7 +471,7 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="cases__block-img">
-                            <img src="./images/case-1.webp" alt="Кейс Белпромстандарт">
+                            <img src="./images/case-1.webp" loading="lazy" alt="Кейс Белпромстандарт">
                         </div>
                         <div class="cases__block">
                             <h4 class="cases__caption">Сертификация, разработка документации</h4>
