--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -33,28 +33,28 @@
             </a>
             <ul class="footer__list-icon">
                 <li class="footer__item">
-                    <a href="#" class="footer__link">
+                    <a href="#" class="footer__link" aria-label="Skype">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#icon-skype">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
-                    <a href="#" class="footer__link">
+                    <a href="#" class="footer__link" aria-label="Whatsapp">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#icon-whatsapp">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
-                    <a href="#" class="footer__link">
+                    <a href="#" class="footer__link" aria-label="Viber">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#icon-viber">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
-                    <a href="#" class="footer__link">
+                    <a href="#" class="footer__link" aria-label="Telegram">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#icon-tme">
                         </svg>
@@ -64,35 +64,35 @@
             <p class="footer__title">Мы в соцсетях</p>
             <ul class="footer__list-icon">
                 <li class="footer__item">
-                    <a href="#" class="footer__link">
+                    <a href="#" class="footer__link" aria-label="Vkontakte">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#icon-vk">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
-                    <a href="#" class="footer__link">
+                    <a href="#" class="footer__link" aria-label="Одноклассники">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#icon-ok">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
-                    <a href="#" class="footer__link">
+                    <a href="#" class="footer__link" aria-label="Facebook">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#icon-fb">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
-                    <a href="#" class="footer__link">
+                    <a href="#" class="footer__link" aria-label="Instagram">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#icon-instagram">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item">
-                    <a href="#" class="footer__link">
+                    <a href="#" class="footer__link" aria-label="YouTube">
                         <svg class="footer__pic" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#icon-youtube">
                         </svg>
@@ -108,56 +108,56 @@
             <p class="footer__title">Способы оплаты</p>
             <ul class="footer__list-pay">
                 <li class="footer__item-pay">
-                    <a href="#" class="footer__link footer__link-pay footer__link-pay_1">
+                    <a href="#" class="footer__link footer__link-pay footer__link-pay_1" aria-label="Способ оплаты Mastercard" >
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#pay-mastercard-securecode">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
-                    <a href="#" class="footer__link footer__link-pay footer__link-pay_2">
+                    <a href="#" class="footer__link footer__link-pay footer__link-pay_2" aria-label="Способ оплаты Visa" >
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#pay-visa">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
-                    <a href="#" class="footer__link footer__link-pay footer__link-pay_3">
+                    <a href="#" class="footer__link footer__link-pay footer__link-pay_3" aria-label="Способ оплаты Visa" >
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#pay-verified-visa">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
-                    <a href="#" class="footer__link footer__link-pay footer__link-pay_4">
+                    <a href="#" class="footer__link footer__link-pay footer__link-pay_4" aria-label="Способ оплаты Белкарт" >
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#pay-belkart-2">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
-                    <a href="#" class="footer__link footer__link-pay footer__link-pay_5">
+                    <a href="#" class="footer__link footer__link-pay footer__link-pay_5" aria-label="Способ оплаты Белкарт" >
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#pay-belkart">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
-                    <a href="#" class="footer__link footer__link-pay footer__link-pay_6">
+                    <a href="#" class="footer__link footer__link-pay footer__link-pay_6" aria-label="Способ оплаты Mastercard" >
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#pay-mastercard">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
-                    <a href="#" class="footer__link footer__link-pay footer__link-pay_7">
+                    <a href="#" class="footer__link footer__link-pay footer__link-pay_7" aria-label="Способ оплаты Webpay" >
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#pay-webpay">
                         </svg>
                     </a>
                 </li>
                 <li class="footer__item-pay">
-                    <a href="#" class="footer__link footer__link-pay footer__link-pay_8">
+                    <a href="#" class="footer__link footer__link-pay footer__link-pay_8" aria-label="Способ оплаты ЕРИП" >
                         <svg class="footer__img" viewBox="0 0 80 30" xmlns="http://www.w3.org/2000/svg">
                             <use xlink:href="./images/sprite.svg#pay-erip">
                         </svg>
