--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -2,16 +2,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" defer></script>
-    <script src="https://unpkg.com/accordion-js@3.3.4/dist/accordion.min.js" deferc></script>
-    <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js" defer></script>
+    <script src="https://unpkg.com/accordion-js@3.3.4/dist/accordion.min.js" async ></script>
+    <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js" async ></script>
     <link href="https://unpkg.com/simplebar@latest/dist/simplebar.css" rel="stylesheet">
     <link href="https://unpkg.com/accordion-js@3.3.4/dist/accordion.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" rel="stylesheet">
-    <link href="fonts/Raleway-Bold.ttf" rel="preload" as="font" type="font/ttf" crossorigin>
-    <link href="fonts/Raleway-Light.ttf" rel="preload" as="font" type="font/ttf" crossorigin>
-    <link href="fonts/Raleway-Medium.ttf" rel="preload" as="font" type="font/ttf" crossorigin>
-    <link href="fonts/Raleway-Regular.ttf" rel="preload" as="font" type="font/ttf" crossorigin>
-    <link href="fonts/Raleway-SemiBold.ttf" rel="preload" as="font" type="font/ttf" crossorigin>
+    <link href="fonts/RalewayBold.woff2" rel="preload" as="font" type="font/woff2" crossorigin>
+    <link href="fonts/RalewayBold.woff" rel="preload" as="font" type="font/woff" crossorigin>
+    <link href="fonts/RalewaySemiBold.woff2" rel="preload" as="font" type="font/woff2" crossorigin>
+    <link href="fonts/RalewaySemiBold.woff" rel="preload" as="font" type="font/woff" crossorigin>
+    <link href="fonts/RalewayMedium.woff2" rel="preload" as="font" type="font/woff2" crossorigin>
+    <link href="fonts/RalewayMedium.woff" rel="preload" as="font" type="font/woff" crossorigin>
+    <link href="fonts/RalewayRegular.woff2" rel="preload" as="font" type="font/woff2" crossorigin>
+    <link href="fonts/RalewayRegular.woff" rel="preload" as="font" type="font/woff" crossorigin>
+    <link href="fonts/RalewayLight.woff2" rel="preload" as="font" type="font/woff2" crossorigin>
+    <link href="fonts/RalewayLight.woff" rel="preload" as="font" type="font/woff" crossorigin>
     <link href="main.css" rel="stylesheet">
     <script src="app.js" defer></script>
     <title>Vtop3</title>
