--- a/src/partials/partners.html
+++ b/src/partials/partners.html
@@ -3,9 +3,9 @@
         <h2 class="partners__title title">МЫ ЯВЛЯЕМСЯ <br><span>СЕРТИФИЦИРОВАННЫМИ ПАРТНЕРАМИ</span></h2>
         <div class="partners__block">
             <a href="https://www.google.com/partners/agency?id=2851488653" target="_blank" class="partners__link">
-                <img class="partners__img" src="./images/svg/partner-1.svg" alt="Google партнер">
+                <img loading="lazy" width="auto" height="auto" class="partners__img" src="./images/svg/partner-1.svg" alt="Google партнер">
             </a>
-            <img class="partners__img partners__img_last" src="./images/svg/partner-2.svg" alt="Партнер PRO">
+            <img loading="lazy" width="auto" height="auto" class="partners__img partners__img_last" src="./images/svg/partner-2.svg" alt="Партнер PRO">
         </div>
     </div>
 </section>
