--- a/src/partials/prices.html
+++ b/src/partials/prices.html
@@ -65,146 +65,146 @@
                         <td class="prices__td">Аналитика/цели</td>
                         <td class="prices__td">
                             <div class="prices__td-flex">
-                                <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="">
-                                <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="">
+                                <img loading="lazy" class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="Яндекс Метрика">
+                                <img loading="lazy" class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="Google аналитика">
                             </div>                           
                         </td>
                         <td class="prices__td prices__line">
                             <div class="prices__td-flex">
-                                <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="">
-                                <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="">
+                                <img loading="lazy" class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="Яндекс Метрика">
+                                <img loading="lazy" class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="Google аналитика">
                             </div>                           
                         </td>
                         <td class="prices__td">
                             <div class="prices__td-flex">
-                                <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="">
-                                <img class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="">
+                                <img loading="lazy" class="prices__pic prices__pic_logo" src="./images/svg/sprite/ya-metrica.svg" alt="Яндекс Метрика">
+                                <img loading="lazy" class="prices__pic prices__pic_logo" src="./images/svg/sprite/google-analytica.svg" alt="Google аналитика">
                             </div>                           
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Еженедельные отчёты</td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
                         </td>
                         <td class="prices__td prices__line">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
                         </td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Поисковая реклама</td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
                         </td>
                         <td class="prices__td prices__line">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
                         </td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Рекламная сеть Яндекс</td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
                         </td>
                         <td class="prices__td prices__line">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
                         </td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Ретаргетинг</td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
 
                         </td>
                         <td class="prices__td prices__line">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
 
                         </td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/minus.svg" alt="Минус">
 
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Баннер на поиске</td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
 
                         </td>
                         <td class="prices__td prices__line">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
 
                         </td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/minus.svg" alt="Минус">
 
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Коллтрекинг</td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
 
                         </td>
                         <td class="prices__td prices__line">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
 
                         </td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/minus.svg" alt="Минус">
 
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Динамические объявления</td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
 
                         </td>
                         <td class="prices__td prices__line">
-                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/minus.svg" alt="Минус">
 
                         </td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/minus.svg" alt="Минус">
 
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Смарт-баннеры</td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
 
                         </td>
                         <td class="prices__td prices__line">
-                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/minus.svg" alt="Минус">
 
                         </td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/minus.svg" alt="Минус">
 
                         </td>
                     </tr>
                     <tr class="prices__tr">
                         <td class="prices__td">Товарная РК</td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/plus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/plus.svg" alt="Плюс">
 
                         </td>
                         <td class="prices__td prices__line">
-                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/minus.svg" alt="Минус">
 
                         </td>
                         <td class="prices__td">
-                            <img class="prices__pic " src="./images/svg/sprite/minus.svg" alt="">
+                            <img loading="lazy" class="prices__pic " src="./images/svg/sprite/minus.svg" alt="Минус">
 
                         </td>
                     </tr>
