--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -5,7 +5,7 @@
             <li class="team__item">
                 <div class="team__person">
                     <h3 class="team__name">Дмитрий</h3>
-                    <img class="team__img" src="./images/person-desktop-1.webp"
+                    <img loading="lazy" class="team__img" width="auto" height="auto" src="./images/person-desktop-1.webp"
                         alt="Дмитрий Технический директор (CTO)" />
                 </div>
                 <div class="team__post">
@@ -14,22 +14,22 @@
                         Сертификаты:
                         <ul class="team__list-sert">
                             <li class="team__item-sert">
-                                <a href="#" target="_blank" class="team__link">
+                                <a href="#" target="_blank" class="team__link" aria-label="Сертификат" >
                                     <div class="team__img-sert team__img-sert_1"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
-                                <a href="#" target="_blank" class="team__link">
+                                <a href="#" target="_blank" class="team__link" aria-label="Сертификат" >
                                     <div class="team__img-sert team__img-sert_2"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
-                                <a href="#" target="_blank" class="team__link">
+                                <a href="#" target="_blank" class="team__link" aria-label="Сертификат" >
                                     <div class="team__img-sert team__img-sert_3"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
-                                <a href="#" target="_blank" class="team__link">
+                                <a href="#" target="_blank" class="team__link" aria-label="Сертификат" >
                                     <div class="team__img-sert team__img-sert_4"></div>
                                 </a>
                             </li>
@@ -40,7 +40,7 @@
             <li class="team__item">
                 <div class="team__person">
                     <h3 class="team__name">Екатерина</h3>
-                    <img class="team__img" src="./images/person-desktop-2.webp" alt="Екатерина SEO специалист" />
+                    <img loading="lazy" class="team__img" width="auto" height="auto" src="./images/person-desktop-2.webp" alt="Екатерина SEO специалист" />
                 </div>
                 <div class="team__post">
                     <h3 class="team__post-title">SEO специалист</h3>
@@ -48,22 +48,22 @@
                         Сертификаты:
                         <ul class="team__list-sert">
                             <li class="team__item-sert">
-                                <a href="#" target="_blank" class="team__link">
+                                <a href="#" target="_blank" class="team__link" aria-label="Сертификат" >
                                     <div class="team__img-sert team__img-sert_1"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
-                                <a href="#" target="_blank" class="team__link">
+                                <a href="#" target="_blank" class="team__link" aria-label="Сертификат" >
                                     <div class="team__img-sert team__img-sert_2"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
-                                <a href="#" target="_blank" class="team__link">
+                                <a href="#" target="_blank" class="team__link" aria-label="Сертификат" >
                                     <div class="team__img-sert team__img-sert_3"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
-                                <a href="#" target="_blank" class="team__link">
+                                <a href="#" target="_blank" class="team__link" aria-label="Сертификат" >
                                     <div class="team__img-sert team__img-sert_4"></div>
                                 </a>
                             </li>
@@ -74,7 +74,7 @@
             <li class="team__item">
                 <div class="team__person">
                     <h3 class="team__name">Марина</h3>
-                    <img class="team__img" src="./images/person-desktop-3.webp" alt="Марина SEO специалист" />
+                    <img loading="lazy" class="team__img" width="auto" height="auto" src="./images/person-desktop-3.webp" alt="Марина SEO специалист" />
                 </div>
                 <div class="team__post">
                     <h3 class="team__post-title">SEO специалист</h3>
@@ -82,22 +82,22 @@
                         Сертификаты:
                         <ul class="team__list-sert">
                             <li class="team__item-sert">
-                                <a href="#" target="_blank" class="team__link">
+                                <a href="#" target="_blank" class="team__link" aria-label="Сертификат" >
                                     <div class="team__img-sert team__img-sert_1"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
-                                <a href="#" target="_blank" class="team__link">
+                                <a href="#" target="_blank" class="team__link" aria-label="Сертификат" >
                                     <div class="team__img-sert team__img-sert_2"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
-                                <a href="#" target="_blank" class="team__link">
+                                <a href="#" target="_blank" class="team__link" aria-label="Сертификат" >
                                     <div class="team__img-sert team__img-sert_3"></div>
                                 </a>
                             </li>
                             <li class="team__item-sert">
-                                <a href="#" target="_blank" class="team__link">
+                                <a href="#" target="_blank" class="team__link" aria-label="Сертификат" >
                                     <div class="team__img-sert team__img-sert_4"></div>
                                 </a>
                             </li>
