--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,30 +1,49 @@
 @font-face {
-    font-family: 'Raleway';
-    src: url("./fonts/Raleway-Bold.ttf") format("truetype");
-    font-weight: 700;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'Raleway';
-    src: url("./fonts/Raleway-SemiBold.ttf") format("truetype");
-    font-weight: 600;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'Raleway';
-    src: url("./fonts/Raleway-Medium.ttf") format("truetype");
-    font-weight: 500;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'Raleway';
-    src: url("./fonts/Raleway-Regular.ttf") format("truetype");
-    font-weight: 400;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'Raleway';
-    src: url("./fonts/Raleway-Light.ttf") format("truetype");
-    font-weight: 300;
-    font-style: normal;
-  }
+  font-family: "Raleway";
+  src: url("./fonts/RalewayBold.woff2") format("woff2"),
+    url("./fonts/RalewayBold.woff") format("woff"),
+    url("./fonts/Raleway-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Raleway";
+  src: url("./fonts/RalewaySemiBold.woff2") format("woff2"),
+    url("./fonts/RalewaySemiBold.woff") format("woff"),
+    url("./fonts/Raleway-SemiBold.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Raleway";
+  src: url("./fonts/RalewayMedium.woff2") format("woff2"),
+    url("./fonts/RalewayMedium.woff") format("woff"),
+    url("./fonts/Raleway-Medium.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Raleway";
+  src: url("./fonts/RalewayRegular.woff2") format("woff2"),
+    url("./fonts/RalewayRegular.woff") format("woff"),
+    url("./fonts/Raleway-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Raleway";
+  src: url("./fonts/RalewayLight.woff2") format("woff2"),
+    url("./fonts/RalewayLight.woff") format("woff"),
+    url("./fonts/Raleway-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
