--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,7 +5,7 @@
         </h1>
         <div class="header__top">
             <div class="header__menu burger">
-                <button class="burger__btn"></button>
+                <button class="burger__btn" aria-label="Главное меню"></button>
                 <nav class="burger__nav">
                     <ul class="burger__list hidden">
                         <li class="burger__item header__item header__item-trigger">
@@ -136,7 +136,7 @@
                         <source media="(max-width: 450px)" srcset="./images/svg/logo-phone.svg" />
                         <source media="(max-width: 1559px)" srcset="./images/svg/logo-tablet.svg" />
                         <source media="(min-width: 1560px)" srcset="./images/svg/logo-desktop.svg" />
-                        <img class="header__logo" src="./images/svg/logo-desktop.svg"
+                        <img class="header__logo" width="auto" height="auto" src="./images/svg/logo-desktop.svg"
                             alt="Логотип агенства рекламы и веб-разработки ВТОП3" />
                     </picture>
                 </a>
